fixing safari image stretch bug

--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@ padding: 0;
     width: 100%;
     padding: 80px 0;
     display: flex;
+    align-items: flex-start;
     justify-content: space-around;
     padding-top: 20px;
 }
